Co-authored-by: martinh118 <martinh118@users.noreply.github.com> avançament

--- a/4_4_maquina_automatica/style.css
+++ b/4_4_maquina_automatica/style.css
@@ -15,7 +15,7 @@
     
 }
 
-.pantallaCalc{
+.pantallaCalc, .pantallaBilletes{
     margin: auto;
     border-radius: 25px; 
     border: 2px solid black;
@@ -25,6 +25,8 @@
 
     margin-top: 10px;
 }
+
+
 
 .teclaCalc{
     margin: auto;
@@ -42,4 +44,5 @@ img.billete{
 
 img.moneda{
     width: 70px;
+    margin-left: 10px;
 }
