--- a/4_4_maquina_automatica/style.css
+++ b/4_4_maquina_automatica/style.css
@@ -2,7 +2,15 @@
     border-radius: 25px; 
     border: 2px solid black;
     width: 100px;
-    height: 500px;
+    height: 550px;
+    text-align: center;
+}
+
+.caixa{
+    border-radius: 25px; 
+    border: 2px solid black;
+    width: 1300px;
+    height: 200px;
     text-align: center;
 }
 
@@ -26,6 +34,15 @@
     margin-top: 10px;
 }
 
+.pagar, .clear{
+   
+    margin: auto;
+    margin-top: 15px;
+    border-radius: 25px; 
+    border: 2px solid black;
+    width: 100px;
+    height: 50px;
+}
 
 
 .teclaCalc{
