--- a/Mapa/style.css
+++ b/Mapa/style.css
@@ -1,8 +1,30 @@
-.fondo{
+.fondo {
    background-color: red;
 }
 
-#contador{
+body{
+   
+}
+
+#Catalunya {
+   stroke: #111111;
+   stroke-width: .5;
+   fill: #eeeeee
+}
+
+#titulo{
+   margin: auto;
+}
+
+#mapa {
+   background-color: rgb(57, 116, 245);
+   margin: auto;
+   width: 640px;
+   border: 1px solid black;
+}
+
+
+#contador {
    border: 1px solid black;
    text-align: center;
    width: 50px;
@@ -11,6 +33,9 @@
    background-color: lightgrey;
 }
 
-#comarques div:hover{
+#comarques div{
+   background-color: white;
+}
+#comarques div:hover {
    background-color: rgb(0, 81, 255);
 }
