--- a/Mapa/style.css
+++ b/Mapa/style.css
@@ -1,10 +1,3 @@
-.fondo {
-   background-color: red;
-}
-
-body{
-   
-}
 
 #Catalunya {
    stroke: #111111;
@@ -25,12 +18,26 @@ body{
 
 
 #contador {
+   border-radius: 25px; 
    border: 1px solid black;
    text-align: center;
-   width: 50px;
+   width: 150px;
    height: 50px;
    line-height: 50px;
-   background-color: lightgrey;
+   background-color: rgb(57, 116, 245);
+}
+
+.comarc{
+   border-radius: 25px; 
+   border: 2px solid black; 
+   width: 100px; 
+   text-align: center;
+}
+
+#comarques{
+   border: 2px solid black; 
+   width: auto;
+   height: auto;
 }
 
 #comarques div{
